# weft-warp-loop

./: .gitignore  README.md  features.md
.github/workflows/: fanout-core.yml  flow-runtime.yml  flow-toolchain.yml  sketch-core.yml
docs/decisions/: 0001-webtransport-termination-via-vendored-h3zero.md  0002-certs-servercertificatehashes-ecdsa-p256.md  0003-vendor-cassie-beautify-solver-plain-c-abi.md  0004-polyline-tessellation-over-exact-bezier-intersection.md  0005-defer-surface-patches-and-avbd.md  0006-libriscv-sandboxed-s7-lisp-over-native-janet.md  0007-s7-shrubbery-toolchain-scope-and-elixir-nif-comparison.md  0008-fiedler-scale-constants-and-fabric-interest-authority.md  0009-reserved-witness-zones-for-cross-machine-lease-authority.md  0010-godot-thin-client-interest-bounded-over-in-place-patches.md  0011-standardize-sandboxed-scripting-on-s7-lisp1.md  0012-lean4-verification-front-end-ported-to-s7.md  0013-mechanize-lean4-to-s7-port-via-gdscript-compiler-shape.md  0014-aot-compile-scheme-content-to-riscv-not-interpret.md  0015-target-lcnf-phase-mono-not-impure.md  0016-restricted-ir-mirrors-lcnf-pure-phase-with-rejection.md  0017-hilbert-curve-zone-authority.md  0018-cost-driven-split-merge.md  0019-capacity-separated-authority-interest-budgets.md  0020-rtt-derived-hysteresis-no-fixed-delays.md  0021-ghost-range-interest-real-distance.md  0022-empirical-onk-scaling-over-hilbert-broadphase-port.md  0023-zpb-wire-verb-carries-velocity-and-rtt-lookahead.md  0024-emit-riscv-assembly-text-not-hand-encoded-machine-code.md  0025-compiled-content-elf-entry-point-is-the-function-itself.md  0026-closures-and-lists-are-required-not-deferred.md  0027-slotmap-shaped-fixed-capacity-collections-no-allocator.md  0028-interpret-first-compile-later-supersedes-0014.md  0029-console-grade-guest-host-data-structures.md  0030-ported-content-lives-under-riscv-guests-content.md  0031-combat-and-progression-ported-filter-not-builtin.md  0032-one-source-of-truth-no-duplicated-upstream-copies.md  0033-shrubbery-lite-reader-offline-preprocessor.md  0034-record-macros-for-immutable-update-boilerplate.md  0035-taskweft-lite-htn-forward-decomposition-ported-to-shrubbery.md  0036-taskweft-layer0-types-solutiontree-egraph-model.md  0037-shrubbery-reader-ported-to-s7-verified-against-python.md  0038-taskweft-layer1-planner-core-complete.md  0039-taskweft-layer2-rebac-complete.md  0040-taskweft-layer3a-temporal-complete.md  (+11 more)
flow-toolchain/: CMakeLists.txt  NOTICE.md  vcpkg.json
flow-toolchain/examples/: README-s7-agent.md  artifacts-mmo-agent.scm  artifacts_mmo_h3_client.c  fanout_core_ffi.cpp  fanout_core_ffi.h  fanout_load_client.actor.cpp  fanout_load_client_main.actor.cpp  fanout_server_main.actor.cpp  fanout_server_main.cpp  hello_actor.actor.cpp  main.cpp  picoquic_fanout_server.actor.cpp  s7_h3_ffi.c  s7_http_ffi.c  s7_riscv_combat_golden_test.cpp  s7_riscv_core.h  s7_riscv_loot_golden_test.cpp  s7_riscv_progression_golden_test.cpp  s7_riscv_taskweft_witnessdag_test.cpp  s7agent_main.c  taskweft-lite.scm  test_picoquic_zpb.py
flow-toolchain/fanout-core/: .gitignore  CombatGoldenVectorScratch.lean  Fanoutcore.lean  IrCodegenScratch.lean  IrCodegenScratch_out.elf  IrDumpScratch.lean  IrLowerScratch.lean  LootGoldenVectorScratch.lean  ProgressionGoldenVectorScratch.lean  README.md  ScaleScratch.lean  TestProps.lean  lake-manifest.json  lakefile.toml  test_ffi.c
flow-toolchain/fanout-core/Fanoutcore/: FanoutCore.lean  Ffi.lean  Partition.lean  SlotMap.lean  Zone.lean  ZoneDispatch.lean
flow-toolchain/riscv-guests/: s7_guest.elf  s7_guest_main.c
flow-toolchain/riscv-guests/content/: combat.scm  loot.scm  progression.scm
flow-toolchain/riscv-guests/shrubbery/: qc-fuzz-generated.scm  qc-fuzz.shrub  shrubbery-to-scheme.scm  shrubbery_to_scheme.py  taskweft-capabilities-generated.scm  taskweft-capabilities.shrub  taskweft-commands-generated.scm  taskweft-floydwarshall-generated.scm  taskweft-floydwarshall.shrub  taskweft-hrr-generated.scm  taskweft-iso8601duration-generated.scm  taskweft-iso8601duration.shrub  taskweft-lite-generated.scm  taskweft-rebacgoal-generated.scm  taskweft-rebacgoal.shrub  taskweft-reentrantplanner-generated.scm  taskweft-reentrantplanner.shrub  taskweft-temporal-generated.scm  taskweft-types-generated.scm  taskweft-types.shrub  taskweft-unifiedgtn-generated.scm  taskweft-witnessdag-generated.scm  taskweft-witnessdag.shrub
flow-toolchain/sketch-core/: .gitignore  GraphDump.lean  SketchCore.lean  TestProps.lean  lake-manifest.json  lakefile.toml  test_ffi.c
flow-toolchain/sketch-core/SketchCore/: Codec.lean  Ffi.lean  Fit.lean  Graph.lean  History.lean  Vec3.lean
plan/: bootstrap-domain.json  bootstrap-plan.json
scripts/: test_local.sh
